--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.jpg">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logoMini.png">
 
     <title>Engulf - Inventory management</title>
   </head>
